examples/test/testpolicy3793.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3793
  namespace: namespace104
spec:
  podSelector:
    matchLabels:
      key36: value6
      key13: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value48
          key46: value0
          key4: value17
      podSelector:
        matchLabels:
          key46: value14
          key12: value2
          key9: value16
